chore(binary): better treeshaking by avoiding side-imports
Centralized the Base16, Base32, and Base64 alphabet tables into a new `constants.ts` module. This change avoids side-imports from individual encode and decode modules, thereby improving treeshaking and reducing the overall bundle size for consumers of this package. Additionally, updated the package.json to expose the new `constants` module, ensuring proper module resolution for both CJS and ESM formats.

--- a/packages/binary/package.json
+++ b/packages/binary/package.json
@@ -12,6 +12,11 @@
     "directory": "packages/binary"
   },
   "exports": {
+    "./constants": {
+      "require": "./dist/constants.cjs",
+      "types": "./dist/constants.d.ts",
+      "import": "./dist/constants.js"
+    },
     "./createStreamDecompress": {
       "require": "./dist/createStreamDecompress.cjs",
       "types": "./dist/createStreamDecompress.d.ts",
