chore(decorators): update `package.json` with package name
Added the package name "@unshared/decorators" to the `package.json` file to ensure correct identification and usage within projects. This change helps in managing dependencies and improves package discoverability.

--- a/packages/decorators/package.json
+++ b/packages/decorators/package.json
@@ -1,4 +1,5 @@
 {
+  "name": "@unshared/decorators",
   "license": "MIT",
   "sideEffects": false,
   "author": "Stanley Horwood <stanley@hsjm.io>",
