feat(decorators): update index and package.json to include `Once` decorator
Exported the `Once` decorator from the package's main entry and updated `package.json` to reflect new module exports and dependencies. Added `@unshared/functions` as a dependency to support the `Once` decorator functionality.

--- a/packages/decorators/package.json
+++ b/packages/decorators/package.json
@@ -16,6 +16,11 @@
       "types": "./dist/Memoize.d.ts",
       "import": "./dist/Memoize.js"
     },
+    "./Once": {
+      "require": "./dist/Once.cjs",
+      "types": "./dist/Once.d.ts",
+      "import": "./dist/Once.js"
+    },
     ".": {
       "require": "./dist/index.cjs",
       "types": "./dist/index.d.ts",
@@ -28,6 +33,7 @@
     "LICENSE.md"
   ],
   "dependencies": {
+    "@unshared/functions": "workspace:*",
     "@unshared/types": "workspace:*"
   }
 }
