chore: update buildPackageJson script and package.json files across multiple packages
Updated the `buildPackageJson.ts` script to ensure that the `type`, `main`, `module`, and `types` fields are correctly set in the `package.json` of each package. Additionally, made corresponding updates to the `package.json` files in the `binary`, `boolean`, `collection`, `color`, `console`, `decorators`, `eslint-config`, `fs`, `functions`, `math`, and `reactivity` packages to include these fields. This change aims to standardize the structure of package.json files across the project and improve module resolution and type support.

--- a/packages/boolean/package.json
+++ b/packages/boolean/package.json
@@ -13,6 +13,9 @@
     "url": "git+ssh://git@github.com:shorwood/unshared.git",
     "directory": "packages/boolean"
   },
+  "main": "./dist/index.cjs",
+  "module": "./dist/index.js",
+  "types": "./dist/index.d.ts",
   "exports": {
     "./Boolean": {
       "require": "./dist/Boolean.cjs",
