--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -8,7 +8,7 @@
   "homepage": "https://github.com/shorwood/unshared#readme",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/shorwood/unshared.git",
+    "url": "git+ssh://git@github.com:shorwood/unshared.git",
     "directory": "packages/eslint-config"
   },
   "main": "./lib/index.js",
