--- a/packages/console/package.json
+++ b/packages/console/package.json
@@ -1,11 +1,9 @@
 {
-  "type": "module",
-  "sideEffects": false,
-  "scripts": {
-    "build": "tsup",
-    "dev": "tsup --watch"
-  },
   "name": "@unshared/console",
+  "type": "module",
+  "license": "MIT",
+  "sideEffects": false,
+  "author": "Stanley Horwood <stanley@hsjm.io>",
   "bugs": "https://github.com/shorwood/unshared/issues",
   "homepage": "https://github.com/shorwood/unshared#readme",
   "repository": {
@@ -13,6 +11,8 @@
     "url": "git+https://github.com/shorwood/unshared.git",
     "directory": "packages/console"
   },
-  "author": "Stanley Horwood <stanley@hsjm.io>",
-  "license": "MIT"
+  "scripts": {
+    "build": "tsup",
+    "dev": "tsup --watch"
+  }
 }
