--- a/packages/math/package.json
+++ b/packages/math/package.json
@@ -11,6 +11,9 @@
     "url": "git+ssh://git@github.com:shorwood/unshared.git",
     "directory": "packages/math"
   },
+  "main": "./dist/index.cjs",
+  "module": "./dist/index.js",
+  "types": "./dist/index.d.ts",
   "exports": {
     "./ceil": {
       "require": "./dist/ceil.cjs",
