chore(unocss-preset): update package.json structure and dependencies
Updated the `package.json` for the `unocss-preset` package to include `main`, `module`, and `types` fields for better module resolution and type support. Shifted `@unocss/core` and `@unocss/preset-mini` from `dependencies` to `devDependencies` and introduced them as `peerDependencies` with updated version constraints to ensure compatibility and flexibility for users installing this package. This change aims to improve the development experience and integration of the `unocss-preset` package with other projects.

--- a/packages/unocss-preset/package.json
+++ b/packages/unocss-preset/package.json
@@ -11,6 +11,9 @@
     "url": "git+ssh://git@github.com:shorwood/unshared.git",
     "directory": "packages/unocss-preset"
   },
+  "main": "./dist/index.cjs",
+  "module": "./dist/index.js",
+  "types": "./dist/index.d.ts",
   "exports": {
     "./preset": {
       "require": "./dist/preset.cjs",
@@ -33,11 +36,17 @@
     "README.md",
     "LICENSE.md"
   ],
+  "peerDependencies": {
+    "@unocss/core": ">=0.59.0",
+    "@unocss/preset-mini": ">=0.59.0"
+  },
   "dependencies": {
-    "@unocss/core": "0.59.0-beta.1",
-    "@unocss/preset-mini": "0.59.0-beta.1",
     "@unshared/collection": "workspace:*",
     "@unshared/string": "workspace:*",
     "@unshared/types": "workspace:*"
+  },
+  "devDependencies": {
+    "@unocss/core": "0.59.0-beta.1",
+    "@unocss/preset-mini": "0.59.0-beta.1"
   }
 }
