--- a/scripts/commitPrompt.yaml
+++ b/scripts/commitPrompt.yaml
@@ -14,17 +14,19 @@ messages:
         feat:    A new feature
         fix:     A bug fix
 
-      If there is a breaking change, add a "!" after the type/scope, e.g. "feat(<scope>)!:"
-      Dont talk about the how, but the what and why.
-      If the branch name contains an issue number, it will be added to the commit message.
-      If the branch does not contain an issue number, do not add one.
-      Use imperative mood.
+      Allowed scopes:
+      - If the commit type is provided by the user INPUT, use it.
+      - Dont say "refactor" or "improvement" in the body.
+      - The scope must be the name of the package affected by the change. No sub-paths.
+      - If there is a breaking change, add a "!" after the type/scope, e.g. "feat(<scope>)!:"
+      - If the branch name contains an issue number, it will be added to the commit message.
+      - Dont capitalize the first letter of the subject.
+      - Use the imperative mood in the subject.
+      - Don't use lists in the body.
+      - If the branch does not contain an issue number, do not add one.
 
   - role: user
     content: |
-      [LAST COMMITS]
-      ...
-
       [STAGED_STATS]
       ...
 
@@ -39,13 +41,15 @@ messages:
       ...
 
       [INPUT]
-      improved typing
+      chore: improved typing
 
   - role: assistant
     content: |
-      US-1234 - fix(reactivity): improved typing of `useState` function
+      chore(reactivity): improved typing of `useState` function
 
       The `useState` function was not correctly typed. This commit fixes
       that by allowing the `value` parameter to be optional and by
       correctly typing the return value. `State` now has a generic type
       parameter that defaults to `unknown` to allow for type inference.
+
+      Ref: US-1234
