--- a/packages/color/package.json
+++ b/packages/color/package.json
@@ -16,35 +16,35 @@
   "module": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "exports": {
-    "./colorHexToSrgb": {
-      "require": "./dist/colorHexToSrgb.cjs",
-      "types": "./dist/colorHexToSrgb.d.ts",
-      "import": "./dist/colorHexToSrgb.js"
+    "./colorHexToRgb": {
+      "require": "./dist/colorHexToRgb.cjs",
+      "types": "./dist/colorHexToRgb.d.ts",
+      "import": "./dist/colorHexToRgb.js"
     },
-    "./colorHslToSrgb": {
-      "require": "./dist/colorHslToSrgb.cjs",
-      "types": "./dist/colorHslToSrgb.d.ts",
-      "import": "./dist/colorHslToSrgb.js"
+    "./colorHslToRgb": {
+      "require": "./dist/colorHslToRgb.cjs",
+      "types": "./dist/colorHslToRgb.d.ts",
+      "import": "./dist/colorHslToRgb.js"
     },
-    "./colorIntegerToSrgb": {
-      "require": "./dist/colorIntegerToSrgb.cjs",
-      "types": "./dist/colorIntegerToSrgb.d.ts",
-      "import": "./dist/colorIntegerToSrgb.js"
+    "./colorIntegerToRgb": {
+      "require": "./dist/colorIntegerToRgb.cjs",
+      "types": "./dist/colorIntegerToRgb.d.ts",
+      "import": "./dist/colorIntegerToRgb.js"
     },
-    "./colorSrgbToHex": {
-      "require": "./dist/colorSrgbToHex.cjs",
-      "types": "./dist/colorSrgbToHex.d.ts",
-      "import": "./dist/colorSrgbToHex.js"
+    "./colorRgbToHex": {
+      "require": "./dist/colorRgbToHex.cjs",
+      "types": "./dist/colorRgbToHex.d.ts",
+      "import": "./dist/colorRgbToHex.js"
     },
-    "./colorSrgbToHsl": {
-      "require": "./dist/colorSrgbToHsl.cjs",
-      "types": "./dist/colorSrgbToHsl.d.ts",
-      "import": "./dist/colorSrgbToHsl.js"
+    "./colorRgbToHsl": {
+      "require": "./dist/colorRgbToHsl.cjs",
+      "types": "./dist/colorRgbToHsl.d.ts",
+      "import": "./dist/colorRgbToHsl.js"
     },
-    "./colorSrgbToInteger": {
-      "require": "./dist/colorSrgbToInteger.cjs",
-      "types": "./dist/colorSrgbToInteger.d.ts",
-      "import": "./dist/colorSrgbToInteger.js"
+    "./colorRgbToInteger": {
+      "require": "./dist/colorRgbToInteger.cjs",
+      "types": "./dist/colorRgbToInteger.d.ts",
+      "import": "./dist/colorRgbToInteger.js"
     },
     "./createColorHsl": {
       "require": "./dist/createColorHsl.cjs",
@@ -56,10 +56,10 @@
       "types": "./dist/createColorPalette.d.ts",
       "import": "./dist/createColorPalette.js"
     },
-    "./createColorSrgb": {
-      "require": "./dist/createColorSrgb.cjs",
-      "types": "./dist/createColorSrgb.d.ts",
-      "import": "./dist/createColorSrgb.js"
+    "./createColorRgb": {
+      "require": "./dist/createColorRgb.cjs",
+      "types": "./dist/createColorRgb.d.ts",
+      "import": "./dist/createColorRgb.js"
     },
     "./types": {
       "require": "./dist/types.cjs",
