chore(types): update exports and package.json for new utility types
Updated `index.ts` to export `StringCombinaison` and `TupleJoin` utility types. Also updated `package.json` to include the corresponding type definitions for these new utilities, ensuring they are correctly packaged and accessible.

--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -278,6 +278,9 @@
     "./Replace": {
       "types": "./dist/Replace.d.ts"
     },
+    "./StringCombinaison": {
+      "types": "./dist/StringCombinaison.d.ts"
+    },
     "./StringConstraint": {
       "types": "./dist/StringConstraint.d.ts"
     },
@@ -304,6 +307,9 @@
     },
     "./TupleFilter": {
       "types": "./dist/TupleFilter.d.ts"
+    },
+    "./TupleJoin": {
+      "types": "./dist/TupleJoin.d.ts"
     },
     "./TupleLength": {
       "types": "./dist/TupleLength.d.ts"
