feat(fs): add utilities for creating and handling temporary files
Added `createTemporaryFile` and `withTemporaryFiles` utilities to the `fs` package to simplify the process of creating and managing temporary files in a safe way. These utilities ensure that temporary files are automatically cleaned up after their use, even if the operation that uses them throws an error. This feature is especially useful for tests or any temporary file management within node.js projects.

`createTemporaryFile` allows for the creation of a temporary file with specified content and directory, returning a path to the file and a function to remove it.

`withTemporaryFiles` wraps a given function, providing it with paths to the specified number of temporary files and ensuring their removal after the function's execution. This utility is designed to make working with multiple temporary files more manageable and error-safe.

These additions enhance the `fs` package's capabilities, making it easier to work with file systems in a more robust and error-resilient manner.

--- a/packages/fs/package.json
+++ b/packages/fs/package.json
@@ -16,6 +16,11 @@
   "module": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "exports": {
+    "./createTemporaryFile": {
+      "require": "./dist/createTemporaryFile.cjs",
+      "types": "./dist/createTemporaryFile.d.ts",
+      "import": "./dist/createTemporaryFile.js"
+    },
     "./findAncestor": {
       "require": "./dist/findAncestor.cjs",
       "types": "./dist/findAncestor.d.ts",
@@ -45,6 +50,11 @@
       "require": "./dist/updateFile.cjs",
       "types": "./dist/updateFile.d.ts",
       "import": "./dist/updateFile.js"
+    },
+    "./withTemporaryFiles": {
+      "require": "./dist/withTemporaryFiles.cjs",
+      "types": "./dist/withTemporaryFiles.d.ts",
+      "import": "./dist/withTemporaryFiles.js"
     },
     ".": {
       "require": "./dist/index.cjs",
