fix(fs): add missing `@unshared/types` dependency
Added the `@unshared/types` package as a dependency in the `fs` package's `package.json` to resolve issues arising from its absence. This ensures that all type references are correctly resolved, improving the package's stability and interoperability with other packages that rely on shared type definitions.

--- a/packages/fs/package.json
+++ b/packages/fs/package.json
@@ -71,6 +71,7 @@
     "@unshared/collection": "workspace:*",
     "@unshared/functions": "workspace:*",
     "@unshared/reactivity": "workspace:*",
-    "@unshared/string": "workspace:*"
+    "@unshared/string": "workspace:*",
+    "@unshared/types": "workspace:*"
   }
 }
