feat(fs): add support for creating temporary directories and enhance temporary file management
Introduced a new utility function `createTemporaryDirectory` to allow the creation of temporary directories with optional configurations such as custom directory paths and custom random string generators for naming. This utility returns the path to the temporary directory and a function to remove it, ensuring easy cleanup.

Enhanced `createTemporaryFile` by adding checks to ensure the created file is indeed a file. This enhances the robustness of the utility by validating the type of the created temporary entity.

Extended `withTemporaryDirectory` utility to support the creation and automatic cleanup of temporary directories within the context of a given function. This utility simplifies the process of working with temporary directories by handling their lifecycle within a callback function.

Modified `withTemporaryFiles` documentation to clarify the function's purpose and usage, ensuring that its API is correctly understood in terms of handling directory paths as arguments.

These changes collectively improve the `fs` package's capability to handle temporary files and directories, making it more versatile and user-friendly for developers who need to manage temporary filesystem entities in their applications.

--- a/packages/fs/package.json
+++ b/packages/fs/package.json
@@ -16,6 +16,11 @@
   "module": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "exports": {
+    "./createTemporaryDirectory": {
+      "require": "./dist/createTemporaryDirectory.cjs",
+      "types": "./dist/createTemporaryDirectory.d.ts",
+      "import": "./dist/createTemporaryDirectory.js"
+    },
     "./createTemporaryFile": {
       "require": "./dist/createTemporaryFile.cjs",
       "types": "./dist/createTemporaryFile.d.ts",
@@ -50,6 +55,11 @@
       "require": "./dist/updateFile.cjs",
       "types": "./dist/updateFile.d.ts",
       "import": "./dist/updateFile.js"
+    },
+    "./withTemporaryDirectories": {
+      "require": "./dist/withTemporaryDirectories.cjs",
+      "types": "./dist/withTemporaryDirectories.d.ts",
+      "import": "./dist/withTemporaryDirectories.js"
     },
     "./withTemporaryFiles": {
       "require": "./dist/withTemporaryFiles.cjs",
