--- a/packages/string/package.json
+++ b/packages/string/package.json
@@ -106,6 +106,11 @@
       "types": "./dist/parseUri.d.ts",
       "import": "./dist/parseUri.js"
     },
+    "./removeTrailingQuotes": {
+      "require": "./dist/removeTrailingQuotes.cjs",
+      "types": "./dist/removeTrailingQuotes.d.ts",
+      "import": "./dist/removeTrailingQuotes.js"
+    },
     "./split": {
       "require": "./dist/split.cjs",
       "types": "./dist/split.d.ts",
