feat(types): add `MaybeFunction` type utility
Introduced a new utility type `MaybeFunction` in the `types` package. This type represents either a function that returns a value of type `T` or the value `T` itself. This addition enhances the flexibility and expressiveness of type definitions by allowing for more nuanced type scenarios where a value can either be directly provided or computed through a function.

The `MaybeFunction` type is generic, supporting a return type `T` and an optional tuple type `P` for function parameters. This utility is particularly useful in scenarios where an API might accept a value or a function returning a value, providing a clean and type-safe way to define such interfaces.

With this update, developers can more easily define APIs that are flexible in terms of how they accept values, either directly or through a getter function, without compromising on type safety or clarity.

--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -170,6 +170,9 @@
     "./MaybeArray": {
       "types": "./dist/MaybeArray.d.ts"
     },
+    "./MaybeFunction": {
+      "types": "./dist/MaybeFunction.d.ts"
+    },
     "./MaybeLiteral": {
       "types": "./dist/MaybeLiteral.d.ts"
     },
