feat(functions): finalize and integrate `createQueue` functionality
Moved the `createQueue` function and associated types from a work-in-progress state to final integration. This update includes a complete reimplementation of the queue system, now supporting features such as concurrency control, task cancellation, cooldown periods between tasks, and event-driven task management. The new implementation is designed to be more robust, flexible, and easy to use, providing developers with a powerful tool for managing asynchronous task execution with fine-grained control over concurrency and execution order.

The update also includes comprehensive unit tests to ensure the reliability and correctness of the queue functionality under various scenarios, including concurrency handling, task cancellation, and cooldown management.

--- a/packages/functions/package.json
+++ b/packages/functions/package.json
@@ -51,6 +51,11 @@
       "types": "./dist/createIndex.d.ts",
       "import": "./dist/createIndex.js"
     },
+    "./createQueue": {
+      "require": "./dist/createQueue.cjs",
+      "types": "./dist/createQueue.d.ts",
+      "import": "./dist/createQueue.js"
+    },
     "./createResolvable": {
       "require": "./dist/createResolvable.cjs",
       "types": "./dist/createResolvable.d.ts",
