feat(eslint-config): enabled `@typescript-eslint/consistent-type-imports` rule in Vue config
Enabled the `@typescript-eslint/consistent-type-imports` rule within the ESLint configuration for Vue projects. This rule enforces the use of `type` imports, which can improve the Vue Single File Component (SFC) compiler's ability to analyze imports more efficiently. The configuration specifies that type annotations are allowed, prefers inline type imports, and encourages the use of `type` imports over regular imports when possible.

This change aims to enhance code consistency and readability across Vue projects by ensuring that types are imported separately from regular imports. This is particularly beneficial for projects that leverage TypeScript in their Vue components, as it helps in maintaining clear separation between runtime dependencies and type dependencies, optimizing the project's overall structure for both developers and compilers.

--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -62,7 +62,8 @@
     "eslint-plugin-vue": "9.25.0",
     "eslint-plugin-yml": "1.14.0",
     "jsonc-eslint-parser": "2.4.0",
-    "typescript-eslint": "7.7.1"
+    "typescript-eslint": "7.7.1",
+    "vue-eslint-parser": "9.4.2"
   },
   "devDependencies": {
     "@types/eslint__eslintrc": "2.1.1",
