--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,7 +15,10 @@
       "vitest/globals",
       "vitest/importMeta"
     ],
+    "allowJs": true,
+    "checkJs": true,
     "strict": true,
+    "outDir": "dist",
     "allowSyntheticDefaultImports": true
   },
   "include": [
@@ -26,7 +29,7 @@
     "vitest.config.ts"
   ],
   "exclude": [
-    "node_modules",
-    "dist"
+    "**/node_modules",
+    "**/dist"
   ]
 }
