--- a/examples/mandelbrot/package.json
+++ b/examples/mandelbrot/package.json
@@ -1,11 +1,14 @@
 {
-  "name": "@example/mandlebrot",
+  "name": "@unshared/examples-mandelbrot",
   "type": "module",
   "private": true,
   "scripts": {
     "dev": "tsup-node --watch",
     "build": "tsup-node",
     "start": "node dist/index.mjs"
+  },
+  "dependencies": {
+    "@unshared/process": "workspace:*"
   },
   "devDependencies": {
     "@chialab/esbuild-plugin-meta-url": "0.17.2",
