chore(process): streamline exports and update dependencies
- Removed deprecated export `createWorkerService.constants` from `index.ts` to clean up the public API.
- Enhanced the `package.json` for `process` package to include new export entries for `createWorkerService` and its worker version, ensuring better module resolution and type support.
- Updated `buildPackageJson.ts` script to more accurately generate export paths by refining the regex, allowing for a wider range of file extensions to be correctly handled.
- Added `@unshared/collection` as a dependency in `process` package to leverage shared collection utilities, reflecting an ongoing effort to integrate and utilize internal library components efficiently.

--- a/packages/process/package.json
+++ b/packages/process/package.json
@@ -21,6 +21,11 @@
       "import": "./dist/createWorkerPool.js"
     },
     "./createWorkerService": {
+      "require": "./dist/createWorkerService.cjs",
+      "types": "./dist/createWorkerService.d.ts",
+      "import": "./dist/createWorkerService.js"
+    },
+    "./createWorkerService.worker": {
       "require": "./dist/createWorkerService.worker.cjs",
       "types": "./dist/createWorkerService.worker.d.ts",
       "import": "./dist/createWorkerService.worker.js"
@@ -63,6 +68,7 @@
   ],
   "dependencies": {
     "@unshared/binary": "workspace:*",
+    "@unshared/collection": "workspace:*",
     "@unshared/decorators": "workspace:*",
     "@unshared/functions": "workspace:*",
     "@unshared/types": "workspace:*"
