--- a/packages/vue/package.json
+++ b/packages/vue/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@unshared/vue",
   "type": "module",
+  "version": "0.0.0",
   "license": "MIT",
   "sideEffects": false,
   "author": "Stanley Horwood <stanley@hsjm.io>",
@@ -8,21 +9,51 @@
   "homepage": "https://github.com/shorwood/unshared#readme",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/shorwood/unshared.git",
+    "url": "git+ssh://git@github.com:shorwood/unshared.git",
     "directory": "packages/vue"
   },
+  "main": "./dist/index.cjs",
+  "module": "./dist/index.js",
+  "types": "./dist/index.d.ts",
+  "exports": {
+    "./components": {
+      "require": "./dist/components.cjs",
+      "types": "./dist/components.d.ts",
+      "import": "./dist/components.js"
+    },
+    "./composables": {
+      "require": "./dist/composables.cjs",
+      "types": "./dist/composables.d.ts",
+      "import": "./dist/composables.js"
+    },
+    "./utils": {
+      "require": "./dist/utils.cjs",
+      "types": "./dist/utils.d.ts",
+      "import": "./dist/utils.js"
+    },
+    ".": {
+      "require": "./dist/index.cjs",
+      "types": "./dist/index.d.ts",
+      "import": "./dist/index.js"
+    }
+  },
+  "files": [
+    "dist",
+    "README.md",
+    "LICENSE.md"
+  ],
   "peerDependencies": {
-    "vue-demi": "0.14.6"
+    "vue": "^3.0.0",
+    "vue-router": "^4.0.0"
   },
   "dependencies": {
-    "@iconify/iconify": "3.1.1",
-    "@types/node": "20.11.24",
+    "@unshared/functions": "workspace:*",
     "@vueuse/core": "10.9.0",
-    "markdown-it": "14.0.0",
-    "vue-router": "4.3.0"
+    "leaflet": "1.9.4",
+    "markdown-it": "14.1.0"
   },
   "devDependencies": {
-    "@vue/test-utils": "2.4.4",
-    "vue-demi": "0.14.7"
+    "@vue/test-utils": "2.4.5",
+    "vue": "3.4.23"
   }
 }
