--- a/examples/nuxt/package.json
+++ b/examples/nuxt/package.json
@@ -13,6 +13,7 @@
   "devDependencies": {
     "@nuxt/test-utils": "3.12.1",
     "@unshared/vue": "workspace:*",
-    "nuxt": "3.10.2"
+    "nuxt": "3.10.2",
+    "unocss": "0.59.4"
   }
 }
