chore: synchronized package versions with monorepo root
Updated all packages to align their version numbers with the root package.json version. This change ensures consistency across the monorepo and simplifies the management of package versions. The scripts for building package.json files were also updated to automatically set the package version based on the root package.json version. This adjustment helps maintain version consistency across future updates.

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@unshared/monorepo",
   "type": "module",
+  "version": "0.0.1",
   "license": "MIT",
   "private": true,
   "author": "Stanley Horwood <stanley@hsjm.io>",
