--- a/packages/math/package.json
+++ b/packages/math/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@unshared/math",
   "type": "module",
+  "version": "0.0.1",
   "license": "MIT",
   "sideEffects": false,
   "author": "Stanley Horwood <stanley@hsjm.io>",
