chore: upgraded and cleanup packages
Updated various dependencies across multiple packages, including major version bumps for `tsup`, `tsx`, and minor updates for `nuxt`, `eslint` plugins, `@types/node`, `@unocss/core`, and `vue`. Additionally, improved the project's configuration by updating the `eslint.config.mjs` to reference the local eslint-config package directly, and enhanced the `package.json` to include a new `pnpm` configuration section for peer dependency rules. This change aims to streamline dependency management and maintain consistency across the project's codebase.

--- a/packages/unocss-preset/package.json
+++ b/packages/unocss-preset/package.json
@@ -47,7 +47,7 @@
     "@unshared/types": "workspace:*"
   },
   "devDependencies": {
-    "@unocss/core": "0.59.0-beta.1",
-    "@unocss/preset-mini": "0.59.0-beta.1"
+    "@unocss/core": "0.59.4",
+    "@unocss/preset-mini": "0.59.4"
   }
 }
