--- a/package.json
+++ b/package.json
@@ -15,6 +15,15 @@
     "pnpm": ">=9.0.0"
   },
   "packageManager": "pnpm@9.0.5",
+  "pnpm": {
+    "peerDependencyRules": {
+      "allowAny": [
+        "eslint",
+        "typescript",
+        "meow"
+      ]
+    }
+  },
   "scripts": {
     "dev": "tsx ./scripts/build.ts --watch true",
     "build": "tsx ./scripts/build.ts",
@@ -33,17 +42,12 @@
     "prepare": "husky"
   },
   "devDependencies": {
-    "@commitlint/config-angular": "19.3.0",
-    "@commitlint/config-conventional": "19.2.2",
     "@commitlint/config-pnpm-scopes": "19.1.0",
-    "@rollup/plugin-terser": "0.4.4",
-    "@types/eslint": "8.56.10",
     "@types/js-yaml": "4.0.9",
     "@types/node": "20.12.7",
-    "@vitest/coverage-v8": "1.5.0",
-    "@vitest/ui": "1.5.0",
-    "@vitest/utils": "1.5.0",
-    "axios": "1.6.8",
+    "@vitest/coverage-v8": "1.5.1",
+    "@vitest/ui": "1.5.1",
+    "@vitest/utils": "1.5.1",
     "commitlint": "19.3.0",
     "dotenv": "16.4.5",
     "eslint": "9.1.1",
@@ -51,21 +55,14 @@
     "husky": "9.0.11",
     "js-yaml": "4.1.0",
     "memfs": "4.8.2",
-    "openai": "4.38.3",
+    "openai": "4.38.4",
     "rollup": "4.16.4",
-    "rollup-plugin-cleanup": "3.2.1",
     "rollup-plugin-dts": "6.1.0",
     "rollup-plugin-esbuild": "6.1.1",
     "tsx": "4.7.2",
     "types-pkg-json": "1.2.1",
-    "types-tsconfig": "2.0.2",
     "typescript": "5.4.5",
-    "vitest": "1.5.0"
-  },
-  "eslintConfig": {
-    "extends": [
-      "@unshared/eslint-config"
-    ]
+    "vitest": "1.5.1"
   },
   "commitlint": {
     "extends": [
