chore: add `lint:ci` script to `package.json`
Added a new script `lint:ci` to the `package.json` to run ESLint without autofix for continuous integration environments. This ensures that linting can be executed in CI pipelines in a consistent manner, enforcing code quality standards.

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "build": "tsx ./scripts/build.ts",
     "examples:nuxt": "pnpm -F @unshared/examples-nuxt dev",
     "lint": "DEBUG=eslint:eslint eslint . --cache",
+    "lint:ci": "eslint . --cache",
     "lint:fix": "DEBUG=eslint:eslint eslint . --fix --cache",
     "test": "vitest --watch",
     "test:ci": "vitest --run --typecheck --coverage",
