--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -8,9 +8,9 @@
   "bugs": "https://github.com/shorwood/unshared/issues",
   "homepage": "https://github.com/shorwood/unshared#readme",
   "repository": {
-    "directory": "packages/eslint-config",
     "type": "git",
-    "url": "git+ssh://git@github.com:shorwood/unshared.git"
+    "url": "git+ssh://git@github.com:shorwood/unshared.git",
+    "directory": "packages/eslint-config"
   },
   "main": "./dist/index.cjs",
   "module": "./dist/index.js",
