--- a/packages/boolean/package.json
+++ b/packages/boolean/package.json
@@ -9,9 +9,9 @@
   "bugs": "https://github.com/shorwood/unshared/issues",
   "homepage": "https://github.com/shorwood/unshared#readme",
   "repository": {
+    "directory": "packages/boolean",
     "type": "git",
-    "url": "git+ssh://git@github.com:shorwood/unshared.git",
-    "directory": "packages/boolean"
+    "url": "git+ssh://git@github.com:shorwood/unshared.git"
   },
   "main": "./dist/index.cjs",
   "module": "./dist/index.js",
