--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -8,9 +8,9 @@
   "bugs": "https://github.com/shorwood/unshared/issues",
   "homepage": "https://github.com/shorwood/unshared#readme",
   "repository": {
+    "directory": "packages/types",
     "type": "git",
-    "url": "git+ssh://git@github.com:shorwood/unshared.git",
-    "directory": "packages/types"
+    "url": "git+ssh://git@github.com:shorwood/unshared.git"
   },
   "types": "./dist/index.d.ts",
   "exports": {
