--- a/packages/vue/package.json
+++ b/packages/vue/package.json
@@ -8,9 +8,9 @@
   "bugs": "https://github.com/shorwood/unshared/issues",
   "homepage": "https://github.com/shorwood/unshared#readme",
   "repository": {
+    "directory": "packages/vue",
     "type": "git",
-    "url": "git+ssh://git@github.com:shorwood/unshared.git",
-    "directory": "packages/vue"
+    "url": "git+ssh://git@github.com:shorwood/unshared.git"
   },
   "main": "./dist/index.cjs",
   "module": "./dist/index.js",
