ci: update CI/CD workflow, Node.js version, and registry settings
Updated the Continuous Integration (CI) and Continuous Deployment (CD) workflows to utilize the latest versions of actions and Node.js. Adjusted the `.npmrc` and `package.json` to target a private registry and refined scripts to improve the CI process. Additionally, modified the `buildIndexes.ts` script to sort imports in a standard manner, avoiding linting issues post-build related to import ordering. This comprehensive update aims to streamline development operations and enforce consistency across CI/CD practices.

--- a/.npmrc
+++ b/.npmrc
@@ -1,4 +1,7 @@
 recursive-install=true
 save-exact=true
+always-auth=true
+
+# Hoist all eslint and vue dependencies to the root.
 public-hoist-pattern[]=*eslint*
 public-hoist-pattern[]=*vue*
