--- a/package.json
+++ b/package.json
@@ -27,11 +27,11 @@
     "dev": "tsx ./scripts/build.ts --watch true",
     "build": "tsx ./scripts/build.ts",
     "examples:nuxt": "pnpm -F @unshared/examples-nuxt dev",
-    "lint": "DEBUG=eslint:eslint eslint . --cache",
-    "lint:ci": "eslint . --cache",
-    "lint:fix": "DEBUG=eslint:eslint eslint . --fix --cache",
+    "lint": "DEBUG=eslint:eslint eslint --cache",
+    "lint:ci": "eslint --cache --ignore-pattern examples",
+    "lint:fix": "DEBUG=eslint:eslint eslint --fix --cache",
     "test": "vitest --watch",
-    "test:ci": "vitest --run --typecheck --coverage",
+    "test:ci": "vitest --run --coverage",
     "test:ui": "vitest --ui",
     "test:types": "vitest --typecheck",
     "test:coverage": "vitest --coverage",
