chore(scripts): add release automation script
Added a new script `release.ts` to automate the process of bumping versions across packages and the root project. The script checks for uncommitted changes, validates the version bump type (major, minor, patch), updates the root package version, sets all packages to this new version, and finally commits these changes along with a new tag corresponding to the new version. This automation enhances the release process, ensuring consistency and efficiency in version management.

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@unshared/monorepo",
   "type": "module",
-  "version": "0.0.1",
+  "version": "0.0.0",
   "license": "MIT",
   "private": true,
   "author": "Stanley Horwood <stanley@hsjm.io>",
@@ -38,6 +38,7 @@
     "commit": "tsx ./scripts/commit.ts",
     "commit:lint": "commitlint --edit",
     "publish:ci": "tsx ./scripts/publish.ts",
+    "release": "tsx ./scripts/release.ts",
     "preinstall": "node ./scripts/forcePnpm.js",
     "prepare": "husky"
   },
