feat(collection): rename `group` to `groupBy`
Renamed the `group` function to `groupBy` to clarify its functionality. This change involves renaming the file from `group.ts` to `groupBy.ts`, updating all references within the code to use `groupBy`, and adjusting the package exports and module definitions accordingly. This renaming improves the clarity of the function's purpose as part of enhancing the collection package's API.

--- a/packages/collection/package.json
+++ b/packages/collection/package.json
@@ -56,10 +56,10 @@
       "types": "./dist/get.d.ts",
       "import": "./dist/get.js"
     },
-    "./group": {
-      "require": "./dist/group.cjs",
-      "types": "./dist/group.d.ts",
-      "import": "./dist/group.js"
+    "./groupBy": {
+      "require": "./dist/groupBy.cjs",
+      "types": "./dist/groupBy.d.ts",
+      "import": "./dist/groupBy.js"
     },
     "./immutable": {
       "require": "./dist/immutable.cjs",
