feat(eslint-config): merged and adjusted stylistic, perfectionist, and typescript rules
Merged the stylistic rules directly into the typescript configuration for a more cohesive and streamlined ESLint setup. This change involves integrating specific stylistic preferences like `brace-style`, `comma-dangle`, `semi`, and indentation rules under the typescript ruleset. Additionally, several corrections and enhancements were made across various configurations to improve consistency and readability. Removed the standalone `stylistic` and `perfectionist` configurations as their rules have now been incorporated into the relevant typescript and other specific configs. This consolidation aims to simplify the configuration process and ensure that stylistic guidelines are consistently applied across TypeScript projects.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,7 +26,8 @@
     "scripts",
     "examples",
     "tsup.config.ts",
-    "vitest.config.ts"
+    "vitest.config.ts",
+    "eslint.config.mjs"
   ],
   "exclude": [
     "**/node_modules",
