--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,6 +26,7 @@ jobs:
         with:
           node-version: 20.x
           cache: "pnpm"
+          registry-url: "https://registry.npmjs.org/"
 
       # --- Install, build, and test.
       - run: pnpm install
@@ -44,3 +45,4 @@ jobs:
         run: pnpm publish:ci --registry https://registry.npmjs.org
         env:
           NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
+          NPM_CONFIG_PROVENANCE: true
